infra/configs/base/gateway/oauth2/oauth2-proxy-reference-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-routes-to-oauth2-proxy
  namespace: oauth2-proxy
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: prod
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: staging
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kube-system
  to:
    - group: ""
      kind: Service
      name: oauth2-proxy
