infra/configs/base/gateway/oauth2/envoyfilter-redirect.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: inject-absolute-redirect
  namespace: istio-system
  annotations:
    description: "Inject X-Auth-Request-Redirect header with absolute URI before ext-authz filter"
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.filters.http.header_mutation
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.header_mutation.v3.HeaderMutation
          mutations:
            request_mutations:
            - append:
                header:
                  key: X-Auth-Request-Redirect
                  value: "%REQ(:scheme)%://%REQ(:authority)%%REQ(:path)%"
                append_action: OVERWRITE_IF_EXISTS_OR_ADD
