infra/configs/base/gateway/oauth2/oauth2-proxy-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: prod
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
  hostnames:
    - oauth-gateway.isning.moe
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - kind: Service
          name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
